[gd_scene load_steps=2 format=3 uid="uid://b501jydmsa1mc"]

[ext_resource type="Script" uid="uid://o7g6bgj16kg0" path="res://scripts/settings_menu.gd" id="1_2c0l1"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2c0l1")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.55)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="Spacer" type="Control" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Display" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 0

[node name="WindowModeLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
text = "Window mode"

[node name="WindowMode" type="OptionButton" parent="PanelContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Exclusive Fullscreen"
popup/item_2/id = 2

[node name="ResolutionLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="PanelContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
selected = 0

[node name="VSync" type="CheckBox" parent="PanelContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
button_pressed = true
text = "VSync"

[node name="Hotkeys" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 1

[node name="RebindHint" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Hotkeys"]
layout_mode = 2
text = "Click Rebind, then press a key (Esc cancels)."
autowrap_mode = 3

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer/TabContainer/Hotkeys"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionsList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer/Hotkeys/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="Sound" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 2

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Sound"]
layout_mode = 2
text = "Master volume"

[node name="MasterVolume" type="HSlider" parent="PanelContainer/VBoxContainer/TabContainer/Sound"]
layout_mode = 2
value = 100.0

[node name="Mute" type="CheckBox" parent="PanelContainer/VBoxContainer/TabContainer/Sound"]
layout_mode = 2
text = "Mute"

[node name="Game" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 3

[node name="Placeholder" type="Label" parent="PanelContainer/VBoxContainer/TabContainer/Game"]
layout_mode = 2
text = "Game-specific settings will go here."
autowrap_mode = 3

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer/Footer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Footer/Back" to="." method="_on_back_pressed"]
